# PyAlarmClock

./: README.md  alarm_clock-v1.1.py  alarm_clock.py  pyproject.toml
.github/workflows/: python-ci.yml
src/alarm_clock/: __init__.py  cli.py  core.py
src/alarm_clock.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_cli.py  test_core.py
