[project]
name = "alarm-clock"
version = "1.1.0"
description = "A simple Python alarm clock that plays a sound at a specified time."
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
alarm-clock = "alarm_clock.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
